# protoreflecthash

./: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  bazel.sh  go.mod  go.sum  hasher.go  hasher_test.go  hashing.go  protoreflecthash.go  protoreflecthash_test.go
.github/workflows/: ci.yaml
test_protos/: BUILD.bazel
test_protos/schema/proto2/: BUILD.bazel  bad.proto  floats.proto  integers.proto  maps.proto  people.proto  planets.proto  simple.proto  well_known_types.proto
test_protos/schema/proto3/: BUILD.bazel  bad.proto  floats.proto  integers.proto  maps.proto  people.proto  planets.proto  simple.proto  well_known_types.proto
testdata/: protoset.pb  test_protos.protoset.pb
