load("@rules_go//go:def.bzl", "go_library", "go_test")
load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/stackb/protoreflecthash
# gazelle:resolve go go github.com/stackb/protoreflecthash/test_protos/generated/latest/proto2 @com_github_stackb_protoreflecthash//test_protos/generated/latest/proto2
# gazelle:resolve go go github.com/stackb/protoreflecthash/test_protos/generated/latest/proto3 @com_github_stackb_protoreflecthash//test_protos/generated/latest/proto3

gazelle(name = "gazelle")

go_library(
    name = "protoreflecthash",
    srcs = [
        "hasher.go",
        "hashing.go",
    ],
    importpath = "github.com/stackb/protoreflecthash",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "protoreflecthash_test",
    srcs = [
        "hasher_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":protoreflecthash"],
    embedsrcs = ["testdata/protoset.pb"],
    deps = [
        "//test_protos/generated/latest/proto2",
        "//test_protos/generated/latest/proto3",
        "@com_github_benlaurie_objecthash//go/objecthash:go_default_library",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protodesc",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//reflect/protoregistry",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/dynamicpb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
