load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
# load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "proto3",
    srcs = [
        "floats.proto",
        "integers.proto",
        "maps.proto",
        "planets.proto",
        "simple.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "proto3_go_proto",
    importpath = "github.com/stackb/protoreflecthash/test_protos/generated/latest/proto3",
    proto = ":proto3",
    visibility = ["//visibility:public"],
)
