load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "proto3_proto",
    srcs = [
        "bad.proto",
        "floats.proto",
        "integers.proto",
        "maps.proto",
        "people.proto",
        "planets.proto",
        "simple.proto",
        "well_known_types.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

go_proto_library(
    name = "proto3_go_proto",
    testonly = True,
    importpath = "github.com/stackb/protoreflecthash/test_protos/generated/latest/proto3",
    proto = ":proto3_proto",
    visibility = ["//visibility:public"],
)
